--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,5 +1,8 @@
 @import 'nav.css';
 @import 'footer.css';
+@import 'product.css';
+@import 'search.css';
+@import '404.css';
 
 .hero-section{
     width: 100%;
